@@ -4605,8 +4605,8 @@ ulong   uprimepi(ulong n);
 GEN     qfauto(GEN g, GEN flags);
 GEN     qfauto0(GEN g, GEN flags);
 GEN     qfautoexport(GEN g, long flag);
-GEN     qfisom(GEN g, GEN h, GEN flags);
-GEN     qfisom0(GEN g, GEN h, GEN flags);
+GEN     qfisom(GEN g, GEN h, GEN flags, GEN G);
+GEN     qfisom0(GEN g, GEN h, GEN flags, GEN G);
 GEN     qfisominit(GEN g, GEN flags, GEN minvec);
 GEN     qfisominit0(GEN g, GEN flags, GEN minvec);
 GEN     qforbits(GEN G, GEN V);
