@@ -13,9 +13,11 @@ OK
 OK
 OK
 OK
+OK
 3840
 OK
 3840
+OK
 OK
 "Group([[-1, 0, 0, 0], [0, -1, 0, 0], [0, 0, -1, 0], [0, 0, 0, -1]], [[0, 0,
  0, 1], [0, 1, 1, 0], [0, -1, 0, 0], [1, -1, -1, 0]], [[-1, 0, 0, 0], [0, 0,
@@ -26,4 +28,4 @@ OK
 [12, 4]
 [12, 4]
 [12, 4]
-Total time spent: 972
+Total time spent: 1372
